--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@
 }
 
 .center{
-    float: left;
-    position: relative;
-    left: -50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .center-container {
@@ -32,4 +33,8 @@
     border-radius: 50px;
     background-color: #141e26;
     padding: 50px;
+}
+
+i{
+    font-size: 40px;
 }
